surrealdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surrealdb
  namespace: surrealdb
spec:
  selector:
    app: surrealdb
  ports:
    - port: 8000
